--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -1,8 +1,10 @@
 .banner_main{
-    // background:url(/images/banner_bg1.png);
-    // @include bg(contain,right bottom);
     background-color: $color;
     padding-bottom: 0;
+    @include mobile_md{
+        background-image:url(/images/banner1.png);
+        @include bg(contain,right bottom);
+    }
     .flex{
         .colL{
             width: 55%;
@@ -38,6 +40,18 @@
                     padding: 0;
                     
 
+                }
+            }
+            .new_lbl_banner{
+                color: $light;
+                font-size: 1.3rem;
+                margin-top: 1rem;
+                margin-left: 1rem;
+                display: block;
+                text-decoration: underline;
+                width: fit-content;
+                &:hover{
+                    opacity: 0.7;
                 }
             }
             .most_searched_cat{
@@ -3097,5 +3111,139 @@
                 }
             }
         }
+    }
+}
+
+// ========review banner===========
+
+.banner_search_review{
+    .contain{
+        > .cntnt{
+            max-width: 60rem;
+            margin: 0 auto 5rem;
+            h1{
+                text-align: center;
+                margin-bottom: 3rem;
+            }
+            form{
+                position: relative;
+                .input{
+                    padding-right: 6rem;
+                    height: 5rem;
+                    @include radius(50px);
+                    border-color: rgba($primary-color, 0.08);
+                    box-shadow:0px 10px 24px 0px rgb(7 26 43 / 2%);
+                    padding-left: 2rem;
+                }
+                button{
+                    @include pos($l:null,$t:0,$r:2rem);
+                    border: none;
+                    background: transparent;
+                    padding: 0;
+                }
+            }
+        }
+    }
+    .flex_view{
+        margin: -1rem;
+        .col{
+            flex:unset;
+            padding: 1rem;
+            width: 100%;
+            .inner{
+                background-color: $light;
+                @include radius(10px);
+                overflow: hidden;
+                padding: 2rem;
+                border: 1px solid #E9E9E9;
+                @include flex($flow:wrap);
+                .head_professional{
+                    @include flex;
+                    column-gap: 1rem;
+                    flex: .7;
+                    @include mobile{
+                        flex: unset;
+                        width: 100%;
+                        margin-bottom: 2rem;
+                    }
+                    .image{
+                        width: 10rem;
+                        height: 10rem;
+                        overflow: hidden;
+                        @include radius(50px);
+                        img{
+                            @include object;
+                        }
+                    }
+                    .cntnt{
+                        flex: 1;
+                        align-self: center;
+                        h4{
+                            margin-bottom: .5rem;
+                        }
+                        p{
+                            font-size: 1.4rem;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            display: -webkit-box;
+                            -webkit-line-clamp: 1;
+                            -webkit-box-orient: vertical;
+
+                        }
+                        .rating_lbl{
+                            background-color: #FFE7E7;
+                            border: 1px solid #FDD6D6;
+                            @include flex;
+                            column-gap: .5rem;
+                            width: fit-content;
+                            @include radius(4px);
+                            padding: .3rem 1rem;
+                            img{
+                                width: 2.2rem;
+                                height: 2.2rem;
+                            }
+                            span{
+                                flex: 1;
+                                font-size: 1.3rem;
+                                font-family: 'SemiBold';
+                                line-height: 1.5;
+                            }
+                        }
+                    }
+                }
+                .done_work{
+                    flex: .7;
+                    text-align: center;
+                    align-self: center;
+                    @include mobile{
+                        flex: unset;
+                        width: 50%;
+                        text-align: left;
+                    }
+                    @include mobile_sm{
+                        width: 100%;
+                        margin-bottom: 2rem;
+                    }
+                    h3{
+                        margin-bottom: 0;
+                    }
+                    p{
+                        margin-bottom: 0.4rem;
+                    }
+                }
+                .btn_blk{
+                    flex: .3;
+                    align-self: center;
+                    @include mobile{
+                        flex: unset;
+                        width: 50%;
+                    }
+                    @include mobile_sm{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+        
     }
 }
