--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -2,14 +2,14 @@
     background-color: $color;
     padding-bottom: 0;
     @include ipad_sm{
-        background-image:url(/images/banner2.png);
+        background-image:url(/images/mob_img.png);
         background-size: contain;
         background-position: 321px 26px;
         background-repeat: no-repeat;
         padding-top: 3rem;
     }
     @include mobile_sm{
-        background-position: 193px 13px;
+        background-position: 129px 6px;
     }
     .flex{
         .colL{
@@ -25,7 +25,7 @@
                 color: $light;
                 margin-bottom: 3rem;
                 @include mobile_sm{
-                    max-width: 49%;
+                    max-width: 66%;
                     line-height: 1.5;
                 }
                 @include mobile_sm{
