--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -4,9 +4,10 @@
     position: relative;
     overflow: hidden;
     .mb_bg{
-        @include pos($l:null,$r:-8rem);
+        @include pos($l:null,$r:-10rem,$t:null);
         padding-bottom: 45%;
-        width: 70%;
+        width: 100%;
+        height: 100%;
         display: none;
         @include ipad_sm{
             display: block;
@@ -3618,6 +3619,151 @@
                     }
                 }
             }
+        }
+    }
+}
+
+// =============maintenance_pkg=======
+.maintenance_pkg{
+    .sec_heading{
+        margin-bottom: 3rem;
+    }
+    .flex{
+        margin: -1rem;
+        .col{
+            flex: unset;
+            width: calc(100% / 3);
+            padding: 1rem;
+            .inner{
+                @include block;
+                position: relative;
+                height: 100%;
+                h3{
+                    font-size: 1.8rem;
+                    color: $color2;
+                    font-family: 'Medium';
+                }
+                h1{
+                    font-size: 3.5rem;
+                    margin-top: 1rem;
+                    border-bottom: 1px solid #ddddddbb;
+                    padding-bottom: 1rem;
+                }
+
+                ul{
+                    @include list;
+                    margin-bottom: 1.5rem;
+                    li{
+                        &:not(:last-child){
+                            margin-bottom: 1rem;
+                        }
+                        padding-left: 2.5rem;
+                        position: relative;
+                        &:before{
+                            @include pos($r:null,$t:.3rem);
+                            content: '';
+                            background:url(/images/CheckCircle.svg);
+                            @include bg(contain);
+                            width: 2rem;
+                            height: 2rem;
+                        }
+                    }
+                }
+                
+                .btn_blk{
+                    margin-top: 2rem;
+                    .site_btn{
+                        width: 100%;
+                    }
+                }
+            }
+            &:last-child{
+                .inner{
+                    text-align: center;
+                    background-image: url(/images/corporate-woman-looking-phone.jpg);
+                    @include bg;
+                    @include flex($flow:column, $justify:center,$align:center);
+                    overflow: hidden;
+                    &:before{
+                        @include pos;
+                        content: '';
+                        background-color: rgba($primary-color, 0.8);
+                    }
+                    > *{
+                        position: relative;
+                    }
+                    h2{
+                        font-size: 2.5rem;
+                        color: $light;
+                        margin-bottom: 2rem;
+                    }
+                    p{
+                        color: $light;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.bene_fits_main{
+    padding-bottom: 0;
+    .flex{
+        .colL{
+            width: 35%;
+            padding-right: 2rem;
+            align-self: center;
+            .sec_heading{
+                margin-bottom: 0;
+            }
+            p{
+                margin-bottom: 0;
+            }
+        }
+        .colR{
+            width: 65%;
+            .flex{
+                margin: -1rem;
+                .col{
+                    flex: unset;
+                    width: calc(100% / 3);
+                    padding: 1rem;
+                    .image{
+                        width: 6rem;
+                        height: 6rem;
+                        overflow: hidden;
+                        margin-bottom: 1.5rem;
+                        img{
+                            @include object(contain);
+                        }
+                    }
+                    p{
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.new_sec_main{
+    background-color: rgba($primary-color, 0.03);
+    .flex{
+        .colL{
+            width: 40%;
+            padding-right: 2rem;
+            .image{
+                @include img(100%);
+                img{
+                    @include object;
+                    @include pos;
+                }
+            }
+        }
+        .colR{
+            width: 60%;
+            padding-left: 2rem;
+            align-self: center;
         }
     }
 }
